# veloFlux

./: .commitlintrc.json  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  codecov.yml  config.yaml  define.json  test_two_sinks.rs
distros/sdv/: Cargo.toml
distros/sdv/benches/: decoder_projection.rs  gbf_merger.rs  schema_load.rs
distros/sdv/docs/: encoder.md  schema.md
distros/sdv/docs/decoder/: gbf.md
distros/sdv/docs/encoder/: columnar_csv_json.md  columnar_json.md
distros/sdv/docs/schema/: dbc.md  gbf.md
distros/sdv/docs/tools/: gbf_gen.md
distros/sdv/src/: decoder.rs  encoder.rs  lib.rs  schema.rs
distros/sdv/src/codec/: gbf_merger.rs  gbf_parser.rs  mod.rs
distros/sdv/src/decoder/: can.rs  gbf.rs
distros/sdv/src/encoder/: can.rs  columnar_csv_json.rs  columnar_json.rs  gbf.rs
distros/sdv/src/schema/: dbc.rs  gbf.rs
distros/sdv/src/tests/: 1_TestBus.dbc  comprehensive.json  mul.json  sim.json  spi_packet.json  test_cases.json
distros/sdv/src/tests/dbc/: 1_PropulsionCAN.dbc
distros/sdv/tests/: gbf_merger_test.rs  gbf_test.rs
distros/sdv/tests/common/: mod.rs
src/ffi/: Cargo.toml
src/ffi/include/: veloflux_ffi.h
src/ffi/src/: lib.rs
src/flow/: Cargo.toml  build.rs
src/flow/docs/: API_REFERENCE.md  README.md
src/flow/src/: backpressure_hub.rs  deadlock.rs  explain_shared_stream.rs  lib.rs  metrics.rs  runtime.rs  sql_conversion.rs  sql_conversion_enhanced.rs  test_support.rs  tuple.rs
src/flow/src/aggregation/: avg.rs  count.rs  deduplicate.rs  extrema.rs  last_row.rs  median.rs  mod.rs  ndv.rs  registry.rs  sum.rs  variance.rs
src/flow/src/catalog/: function_catalog.rs  functions.rs  mod.rs
src/flow/src/codec/: merger.rs  mod.rs  registry.rs  video.rs
src/flow/src/codec/decoder/: mod.rs
src/flow/src/codec/encoder/: json.rs  mod.rs  template_transform.rs
src/flow/src/connector/: memory_pubsub.rs  mod.rs  mqtt_client.rs  nng_pubsub.rs  registry.rs
src/flow/src/connector/sink/: kuksa.rs  kura.rs  memory.rs  mock.rs  mod.rs  mqtt.rs  nng_pubsub.rs  nop.rs  video.rs
src/flow/src/connector/source/: history.rs  memory.rs  mock.rs  mod.rs  mqtt.rs  nng_pubsub.rs  video.rs
src/flow/src/eventtime/: mod.rs  registry.rs
src/flow/src/expr/: context.rs  datafusion_adapter.rs  df_function.rs  evaluator.rs  func.rs  internal_columns.rs  mod.rs  scalar.rs  sql_conversion.rs  value_compare.rs
src/flow/src/expr/custom_func/: array_func.rs  helpers.rs  math_func.rs  misc_func.rs  mod.rs  null_func.rs  obj_func.rs  registry.rs  string_func.rs  time_func.rs
src/flow/src/expr/datafusion_func/: evaluator.rs
src/flow/src/instance/: cpu_metrics.rs  mod.rs  mqtt.rs  pipelines.rs  registries.rs  streams.rs
src/flow/src/model/: collection.rs  mod.rs  record_batch.rs  record_batch_debug.rs  record_batch_impl.rs  tuple.rs
src/flow/src/pipeline/: api.rs  context.rs  internal.rs  mod.rs  tests.rs
src/flow/src/planner/: decode_projection.rs  explain.rs  logical_optimizer.rs  logical_plan_ir.rs  mod.rs  optimizer.rs  physical_plan_builder.rs  physical_plan_topology_test.rs  plan_cache.rs  shared_stream_plan.rs  sink.rs  two_sinks_test.rs
src/flow/src/planner/logical/: aggregation.rs  compute.rs  datasource.rs  filter.rs  mod.rs  order.rs  project.rs  sink.rs  stateful_function.rs  tail.rs  window.rs
src/flow/src/processor/: aggregation_processor.rs  barrier.rs  barrier_processor.rs  base.rs  batch_processor.rs  collection_layout_normalize_processor.rs  collection_utils.rs  compute_processor.rs  control_source_processor.rs  datasource_processor.rs  decoder_processor.rs  empty_suppress_processor.rs  encoder_processor.rs  filter_processor.rs  memory_collection_materialize_processor.rs  mod.rs  order_processor.rs  output_row_accessor.rs  processor_builder.rs  project_processor.rs  result_collect_processor.rs  result_sink_processor.rs  row_diff_processor.rs  sampler_processor.rs  shared_stream_processor.rs  sink_processor.rs  sliding_window_processor.rs  source_change_gate_processor.rs  state_window_processor.rs  stateful_function_processor.rs  stats.rs  stream_data.rs  streaming_aggregation_processor.rs  streaming_count_aggregation_processor.rs  streaming_encoder_processor.rs  streaming_sliding_aggregation_processor.rs  streaming_state_aggregation_processor.rs  streaming_tumbling_aggregation_processor.rs  throttler_processor.rs  tumbling_window_processor.rs  (+1 more)
src/flow/src/shared_stream/: mod.rs
src/flow/src/stateful/: acc.rs  changed_col.rs  had_changed.rs  lag.rs  latest.rs  mod.rs  registry.rs  util.rs
src/flow/tests/: combined_access_test.rs  core_conversion_test.rs  create_pipeline_test.rs  custom_func_test.rs  end_to_end_projection_test.rs  eventtime_explain_test.rs  field_access_test.rs  filter_processor_test.rs  flow_instance_isolation_test.rs  integration_tests.rs  list_index_test.rs  mock_pipeline_test.rs  mock_source.rs  nng_pubsub_test.rs  pipeline.rs  pipeline_smoke.rs  pipeline_test.rs  planner.rs  processor_pipeline_test.rs  registry_defaults_test.rs  sampler_test.rs  shared_stream.rs  stateful_function_test.rs  stream_parser_integration_test.rs  video_gstreamer.rs  wildcard_expr_test.rs
src/flow/tests/pipeline/: batching_tests.rs  common.rs  eventtime_tests.rs  pipeline_tests.rs  sampler_tests.rs  shared_stream_tests.rs  stateful_function_tests.rs  stats_tests.rs  video_smoke_tests.rs
src/manager/: Cargo.toml
src/manager/src/: audit.rs  export.rs  flow_instance.rs  function.rs  import.rs  init_process.rs  instances.rs  lib.rs  memory_topic.rs  mqtt_client.rs  pipeline.rs  startup.rs  storage_bridge.rs  stream.rs  udf_handler.rs  worker_client.rs  worker_protocol.rs  worker_server.rs
src/manager/src/pipeline/: context.rs  handlers.rs  remote.rs  spec.rs  state.rs  types.rs
src/manager/src/worker/: client.rs  mod.rs  protocol.rs  server.rs
src/sdk/: Cargo.toml
src/sdk/src/: client.rs  config.rs  error.rs  lib.rs  transport.rs
src/sdk/src/types/: mod.rs  pipeline.rs  stream.rs
src/telemetry/: Cargo.toml
src/telemetry/src/: flow_instance.rs  lib.rs  metrics.rs  runtime.rs
(+426 files in other folders)
