[workspace]
members = [
    "src/flow",
    "src/datatypes",
    "src/parser", "src/manager",
    "src/telemetry", "src/storage",
    "src/build_info",
]
resolver = "2"

[package]
name = "velo-flux"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
prometheus_exporter = { version = "0.8", optional = true }
sysinfo = { version = "0.30", optional = true }
pprof = { version = "0.13.0", features = ["protobuf-codec"], optional = true }
tikv-jemallocator = { version = "0.6.0", features = ["profiling"], optional = true }
tikv-jemalloc-ctl = { version = "0.6.0", features = ["stats"], optional = true }
manager = { path = "src/manager" }
flow = { path = "src/flow" }
telemetry = { path = "src/telemetry", optional = true }
storage = { path = "src/storage" }
build_info = { path = "src/build_info" }

[features]
default = ["metrics", "profiling"]
metrics = ["dep:prometheus_exporter", "dep:sysinfo", "telemetry"]
profiling = ["dep:pprof", "dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]

[[bin]]
name = "velo-flux"
path = "src/main.rs"

[profile.release-thin]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
