[workspace]
members = [
    "src/flow",
    "src/metrics",
    "src/datatypes",
    "src/parser", "src/manager",
    "src/telemetry", "src/storage",
    "src/test_coverage",
    "src/build_info",
    "src/sdk",
    "src/ffi",
    "src/udf",
    "src/veloflux-udf-sdk",
    "distros/sdv",
]
resolver = "2"

[package]
name = "veloflux"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
toml = "0.8"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = "0.12"
prometheus_exporter = { version = "0.8", optional = true }
sysinfo = { version = "0.30", optional = true }
pprof = { version = "0.13.0", features = ["protobuf-codec"], optional = true }
tikv-jemallocator = { version = "0.6.0", features = ["profiling"], optional = true }
tikv-jemalloc-ctl = { version = "0.6.0", features = ["stats"], optional = true }
manager = { path = "src/manager", default-features = false }
flow = { path = "src/flow" }
datatypes = { path = "src/datatypes" }
telemetry = { path = "src/telemetry", optional = true }
storage = { path = "src/storage" }
build_info = { path = "src/build_info" }
sdk = { path = "src/sdk" }
veloflux_metrics = { path = "src/metrics" }
veloflux_sdv = { package = "veloflux-sdv", path = "distros/sdv", default-features = false }
# Explicit indexmap dependency with 'std' feature is required to resolve 
# ABI/generic-mismatch errors in 'tower 0.4' during '-Zbuild-std' sanitizer runs.
indexmap = { version = "1.9.3", features = ["std"] }

[features]
default = ["metrics", "profiling", "allocator-jemalloc", "wasm_udf"]
metrics = ["dep:prometheus_exporter", "dep:sysinfo", "telemetry"]
profiling = ["dep:pprof"]
allocator-jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]
allocator-system = []
deadlock_detection = ["flow/deadlock_detection", "manager/deadlock_detection", "parking_lot/deadlock_detection"]
gmp_force_cross = ["flow/gmp_force_cross"]
wasm_udf = ["manager/wasm_udf", "veloflux_sdv/wasm_udf"]
video_gstreamer = ["flow/video_gstreamer"]
nng_pubsub = ["flow/nng_pubsub", "veloflux_sdv/nng_pubsub"]

[dev-dependencies]
bytes = "1"
criterion = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tempfile = "3"
flate2 = "1"
tar = "0.4"
proptest = "1"

[[bench]]
name = "pipeline_e2e"
harness = false

[[bin]]
name = "veloflux"
path = "src/main.rs"

[[bin]]
name = "flow_sql_assert"
path = "tests/sql_assert/flow_sql_assert.rs"


[profile.release-thin]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
debug = 1 # Minimal debug info (line tables) for better diagnostics without SIGBUS/OOM linker pressure

[profile.test]
debug = 1

# Optimize heavy dependencies even in dev/test to reduce linker pressure
[profile.dev.package.arrow]
opt-level = 3
[profile.dev.package.parquet]
opt-level = 3
[profile.dev.package.tonic]
opt-level = 3
[profile.test.package.arrow]
opt-level = 3
[profile.test.package.parquet]
opt-level = 3
[profile.test.package.tonic]
opt-level = 3
