[package]
name = "veloflux-ffi"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
# Maintain production parity by default
default = ["metrics", "profiling", "allocator-jemalloc"]
metrics = ["veloflux/metrics"]
profiling = ["veloflux/profiling"]
allocator-jemalloc = ["veloflux/allocator-jemalloc"]
allocator-system = ["veloflux/allocator-system"]

[dependencies]
veloflux = { path = "../..", default-features = false }
