[package]
name = "flow"
version = "0.0.1"
edition = "2021"

[dependencies]
datatypes = { path = "../datatypes" }
parser = { path = "../parser" }
build_info = { path = "../build_info" }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
sqlparser = { version = "0.40", features = ["serde", "visitor"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"
thiserror = "1.0"
once_cell = "1.19"
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }
url = "2"
prometheus = "0.13"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
parquet = "53.0.0"
arrow = "53.0.0"
kuksa-rust-sdk = "0.2.1"
http = "0.2.12"

[dev-dependencies]
tempfile = "3"
