[package]
name = "flow"
version = "0.0.1"
edition = "2021"

[dependencies]
datatypes = { path = "../datatypes" }
parser = { path = "../parser" }
build_info = { path = "../build_info" }
veloflux_metrics = { path = "../metrics" }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
sqlparser = { version = "0.40", features = ["serde", "visitor"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"
thiserror = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
parquet = "53.0.0"
arrow = "53.0.0"
kuksa-rust-sdk = "0.2.1"
http = "0.2.12"
humantime-serde = "1"
libc = "0.2"
rand = "0.10.0"
rug = "1.28.1"
regex = "1.12.3"
icu = { version = "2.1.1", features = ["compiled_data"] }
upon = "0.10"
base64 = "0.22"
crc32fast = "1"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
chrono = "0.4"
gmp-mpfr-sys = { version = "~1.6", default-features = false, optional = true }
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }

[dev-dependencies]
rumqttd = "0.20.0"
tempfile = "3"

[features]
deadlock_detection = ["parking_lot/deadlock_detection"]
gmp_force_cross = ["gmp-mpfr-sys/force-cross"]
video_gstreamer = ["gstreamer", "gstreamer-app"]
