[package]
name = "manager"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "net", "sync"] }
tracing = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
flow = { path = "../flow" }
parser = { path = "../parser" }
storage = { path = "../storage" }
build_info = { path = "../build_info" }
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"

[features]
deadlock_detection = ["flow/deadlock_detection", "parking_lot/deadlock_detection"]
