[package]
name = "sdk"
version = "0.1.0"
edition = "2024"
description = "Rust SDK for VeloFlux manager REST API"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "net", "sync", "time"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
urlencoding = "2"
thiserror = "1"
bytes = "1"

http = "1"

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
