[package]
name = "telemetry"
version = "0.0.1"
edition = "2021"

[dependencies]
once_cell = "1.19"
prometheus = "0.13"
tokio = { version = "1", default-features = false, features = ["rt", "time", "sync"] }
tokio-metrics = { version = "0.4.5", features = ["rt"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
